@@ -56,6 +56,7 @@ Version 1.3-svn:
    * units now have levelin animations when they level into this unit
    * units now have levelout animations when they level out of this unit
    * animations can now use standard unit filters
+   * animations can now use standard unit filters on the secondary unit
  * multiplayer game management
    * client now tells the server if a game ended in victory or defeat
    * configurable castle size for random map generator (patch #598, FR #3232)
